--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee+Shade" type="text/css"></link>
 
 <script src = "website.js" > </script>
 <link rel = "stylesheet" type = "text/css" href = "website.css"/>
@@ -31,6 +32,8 @@
          <a class = "top" href = "memory game/memory.html">Memory Game</a>
 
          <a class = "top" href = "Spiral/spiral.html">Spiral</a>
+          <a class = "top" href = "rainbow text/rainbow.html">Rainbow Text</a>
+            <a class = "top" href = "bootstrap quiz/boot.html">Quiz</a>
          </nav>
 
 
@@ -40,14 +43,14 @@
 
          </div>
 
-         <div id = "intro"class = "jumbotron">Elisandra Cardona</div>
+         <div id = "intro" class = "jumbotron">Elisandra Cardona</div>
+
+<div class="wrapper">
+<h3 class = "fadeIn"> Welcome </h3>
+</div>
 
 
-<h3> Welcome </h3>
-
-
-
-
+ <footer><i class="fa fa-github">Scripter12</i></footer>
 
 
 
